# AMD-AI-Server

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.hub.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
control-panel/: Dockerfile  app.py  requirements.txt
control-panel/templates/: about.html  index.html
desktop/: amd-ai-server.desktop
docs/: CUSTOMIZATION.md  TROUBLESHOOTING.md
mcp-server/: README.md  pyproject.toml  run.sh
mcp-server/local_ai_mcp/: __init__.py  server.py
planning/: ai-tool-stack-voice-note.md  tool-stack-brainstorming-and-local-ai-server.md
scripts/: check-gpu.sh  install.sh  launcher.sh  start.sh  status.sh  stop.sh  uninstall.sh
stacks/chatterbox/: config.yaml  docker-compose.yml
stacks/comfyui/: docker-compose.yml
stacks/ollama/: docker-compose.yml
stacks/pytorch/: docker-compose.yml
stacks/tts/: docker-compose.yml
stacks/whisper/: Dockerfile  docker-compose.yml  whisper_api.py
systemd/: amd-ai-server.service
