[project]
name = "local-ai-mcp"
version = "0.1.0"
description = "MCP server for local AI stack (Whisper, Ollama, ComfyUI)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
local-ai-mcp = "local_ai_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
